Fix Buy dialog issue and remove certain table sort functionalities.

--- a/src/app/shopping-cart/buy-dialog/buy-dialog.component.html
+++ b/src/app/shopping-cart/buy-dialog/buy-dialog.component.html
@@ -14,6 +14,6 @@
     </mat-dialog-content>
     <mat-dialog-actions>
         <button color="warn" mat-raised-button [mat-dialog-close]="address.value">Yes</button>
-        <button mat-stroked-button [mat-dialog-close]="false">No</button>
+        <button mat-stroked-button [mat-dialog-close]="'no'">No</button>
     </mat-dialog-actions>
 </section>
