--- a/src/app/orders/orders/orders.component.html
+++ b/src/app/orders/orders/orders.component.html
@@ -16,7 +16,7 @@
                     <td mat-cell *matCellDef="let element; let i = index"> {{i + 1}} </td>
                 </ng-container>
 
-                <ng-container matColumnDef="datetime">
+                <ng-container matColumnDef="dateCreated">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Date and time </th>
                     <td mat-cell *matCellDef="let element"> {{element.dateCreated}} </td>
                 </ng-container>
@@ -45,19 +45,19 @@
                                     </mat-panel-description>
                                 </mat-expansion-panel-header>
                                 <div class="product-container">
-                                    <table mat-table [dataSource]="element.products" matSort>
+                                    <table mat-table [dataSource]="element.products">
                                         <ng-container matColumnDef="number">
                                             <th mat-header-cell *matHeaderCellDef> No. </th>
                                             <td mat-cell *matCellDef="let product; let i = index"> {{i + 1}} </td>
                                         </ng-container>
 
                                         <ng-container matColumnDef="name">
-                                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+                                            <th mat-header-cell *matHeaderCellDef> Name </th>
                                             <td mat-cell *matCellDef="let product"> {{product.name}} </td>
                                         </ng-container>
 
                                         <ng-container matColumnDef="rating">
-                                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Rating </th>
+                                            <th mat-header-cell *matHeaderCellDef> Rating </th>
                                             <td mat-cell *matCellDef="let product">
                                                 <bar-rating [readOnly]="element.state != 'Received' || getReviewValue(product.id, element.id) != undefined" [max]="5" [theme]="'default'" #review [rate]="getReviewValue(product.id, element.id)" (rateChange)="addReview(review, product.id, element.id)"></bar-rating>
                                             </td>
@@ -81,7 +81,7 @@
                     </td>
                 </ng-container>
 
-                <ng-container matColumnDef="status">
+                <ng-container matColumnDef="state">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> State </th>
                     <td mat-cell *matCellDef="let element"> {{element.state}} </td>
                 </ng-container>
