--- a/src/app/product/product-details/product-details.component.html
+++ b/src/app/product/product-details/product-details.component.html
@@ -48,19 +48,19 @@
                                 </mat-panel-description>
                             </mat-expansion-panel-header>
                             <div class="product-container">
-                                <table mat-table [dataSource]="product?.reviews" matSort>
+                                <table mat-table [dataSource]="product?.reviews">
                                     <ng-container matColumnDef="number">
                                         <th mat-header-cell *matHeaderCellDef> No. </th>
                                         <td mat-cell *matCellDef="let element; let i = index"> {{i + 1}} </td>
                                     </ng-container>
 
                                     <ng-container matColumnDef="name">
-                                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+                                        <th mat-header-cell *matHeaderCellDef> Name </th>
                                         <td mat-cell *matCellDef="let element"> {{element.user?.firstName + " " + element.user?.lastName}} </td>
                                     </ng-container>
 
                                     <ng-container matColumnDef="rating">
-                                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Rating </th>
+                                        <th mat-header-cell *matHeaderCellDef> Rating </th>
                                         <td mat-cell *matCellDef="let element">
                                             <bar-rating readOnly="true" [max]="5" [theme]="'default'" [rate]="element?.value"></bar-rating>
                                         </td>
