--- a/src/app/auth/profile/password/password.component.html
+++ b/src/app/auth/profile/password/password.component.html
@@ -12,21 +12,24 @@
 
                 <mat-form-field hintLabel="Please, enter your old password...">
                     <input matInput ngModel #oldPassword="ngModel" type="password" placeholder="Old password..."
-                        name="oldPassword" required>
+                        name="oldPassword" required minlength="8">
                     <mat-error *ngIf="oldPassword.hasError('required')">Field should not be empty!</mat-error>
+                    <mat-error *ngIf="oldPassword.hasError('minlength')">Field must contain at least 8 characters!</mat-error>
                 </mat-form-field>
 
                 <mat-form-field hintLabel="Please, enter minimum 8 characters...">
                     <input matInput ngModel #password="ngModel" type="password" placeholder="New password..."
-                        name="password" required minLength="8">
+                        name="password" required minlength="8">
                     <mat-hint align="end">{{ password.value?.length }} / 8</mat-hint>
                     <mat-error *ngIf="password.hasError('required')">Field should not be empty!</mat-error>
+                    <mat-error *ngIf="password.hasError('minlength')">Field must contain at least 8 characters!</mat-error>
                 </mat-form-field>
 
                 <mat-form-field hintLabel="Please, confirm your password...">
                     <input matInput ngModel #confirmPassword="ngModel" type="password" placeholder="New password..."
-                        name="confirmPassword" required minLength="8">
+                        name="confirmPassword" required minlength="8">
                     <mat-error *ngIf="confirmPassword.hasError('required')">Field should not be empty!</mat-error>
+                    <mat-error *ngIf="confirmPassword.hasError('minlength')">Field must contain at least 8 characters!</mat-error>
                     <mat-error *ngIf="">Password does not match!</mat-error>
                 </mat-form-field>
                 <mat-error id="custom-error">{{ error }}</mat-error>
