--- a/src/app/auth/profile/password/password.component.html
+++ b/src/app/auth/profile/password/password.component.html
@@ -3,7 +3,7 @@
         <form #form="ngForm" (ngSubmit)="onSubmit(form)" fxLayout="column" fxLayoutAlign="center center"
             fxLayoutGap="3vh">
             <mat-card-header fxLayoutAlign="center center">
-                <div mat-card-avatar>
+                <div>
                     <mat-icon>account_circle</mat-icon>
                 </div>
                 <mat-card-title>Change your password</mat-card-title>
