--- a/src/app/shopping-cart/shopping-cart/shopping-cart.component.css
+++ b/src/app/shopping-cart/shopping-cart/shopping-cart.component.css
@@ -5,10 +5,7 @@ mat-card {
     width: 75%;
     margin: auto;
 }
-mat-card-content {
-    width: 100%;
-}
-table {
+mat-card-content, table {
     width: 100%;
 }
 #buy {
