--- a/src/app/auth/profile/personal-information/personal-information.component.html
+++ b/src/app/auth/profile/personal-information/personal-information.component.html
@@ -2,7 +2,7 @@
   <mat-card>
     <form #form="ngForm" (ngSubmit)="onSubmit(form)" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="3vh">
       <mat-card-header fxLayoutAlign="center center">
-        <div mat-card-avatar>
+        <div>
           <mat-icon>account_circle</mat-icon>
         </div>
         <mat-card-title>Profile information</mat-card-title>
@@ -11,13 +11,13 @@
 
         <mat-form-field>
           <input matInput [ngModel]="this.currentUser.firstName" #firstName="ngModel" type="text"
-            placeholder="First name..." name="firstName" required minLength="3" [disabled]="isNotEditable">
+            placeholder="First name..." name="firstName" required [disabled]="isNotEditable">
           <mat-error *ngIf="firstName.hasError('required')">Field should not be empty!</mat-error>
         </mat-form-field>
 
         <mat-form-field>
-          <input matInput [(ngModel)]="this.currentUser.lastName" ngModel #lastName="ngModel" type="text"
-            placeholder="Last name..." name="lastName" required minLength="3" [disabled]="isNotEditable">
+          <input matInput [ngModel]="this.currentUser.lastName" #lastName="ngModel" type="text"
+            placeholder="Last name..." name="lastName" required [disabled]="isNotEditable">
           <mat-error *ngIf="lastName.hasError('required')">Field should not be empty!</mat-error>
         </mat-form-field>
 
@@ -26,14 +26,14 @@
         </mat-form-field>
 
         <mat-form-field>
-          <input matInput [(ngModel)]="this.currentUser.phone" ngModel #phone="ngModel" type="tel"
-            placeholder="Phone number..." name="phone" required minLength="8" [disabled]="isNotEditable">
+          <input matInput [ngModel]="this.currentUser.phone" #phone="ngModel" type="tel"
+            placeholder="Phone number..." name="phone" required [disabled]="isNotEditable">
           <mat-error *ngIf="phone.hasError('required')">Field should not be empty!</mat-error>
         </mat-form-field>
 
         <mat-form-field>
-          <input matInput [(ngModel)]="this.currentUser.address" ngModel #address="ngModel" type="text"
-            placeholder="Address..." name="address" required minLength="8" [disabled]="isNotEditable">
+          <input matInput [ngModel]="this.currentUser.address" #address="ngModel" type="text"
+            placeholder="Address..." name="address" required [disabled]="isNotEditable">
           <mat-error *ngIf="address.hasError('required')">Field should not be empty!</mat-error>
         </mat-form-field>
 
