--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -8,13 +8,13 @@
             <mat-card-content>
                 <mat-form-field hintLabel="Please, enter your first name...">
                     <input matInput ngModel #firstName="ngModel" type="text" placeholder="First name..."
-                        name="firstName" required minLength="3">
+                        name="firstName" required>
                     <mat-error *ngIf="firstName.hasError('required')">Field should not be empty!</mat-error>
                 </mat-form-field>
 
                 <mat-form-field hintLabel="Please, enter your last name...">
                     <input matInput ngModel #lastName="ngModel" type="text" placeholder="Last name..." name="lastName"
-                        required minLength="3">
+                        required>
                     <mat-error *ngIf="lastName.hasError('required')">Field should not be empty!</mat-error>
                 </mat-form-field>
 
@@ -27,13 +27,13 @@
 
                 <mat-form-field hintLabel="Please, enter your phone number...">
                     <input matInput ngModel #phone="ngModel" type="tel" placeholder="Phone number..." name="phone"
-                        required minLength="8">
+                        required>
                     <mat-error *ngIf="phone.hasError('required')">Field should not be empty!</mat-error>
                 </mat-form-field>
 
                 <mat-form-field hintLabel="Please, enter your address...">
                     <input matInput ngModel #address="ngModel" type="text" placeholder="Address..." name="address"
-                        required minLength="8">
+                        required>
                     <mat-error *ngIf="address.hasError('required')">Field should not be empty!</mat-error>
                 </mat-form-field>
 
